# GitProjectTest0

./: DelEmptyLine.py  DelImg.bat  DelImg.py  DirImg.bat  DirImg.py  Go-5000m-PmCL_onlyJpeg_Exter.mcf  Go-5000m-PmCL_onlyJpeg_Generator.mcf  SISO_APC_GbE.sln  TYTunnelTestVehicle.ini  adimg.bat  dirJpeg.bat  gpioStart.bat  startGpio.bat  tips.txt
SISO_APC_GbE/: ClassDiagram1.cd  FreeImaged.lib  ReadMe.txt  SDrawDef.h  SDrawInterface.cpp  SDrawInterface.h  SISO_APC_GbE.aps  SISO_APC_GbE.cpp  SISO_APC_GbE.h  SISO_APC_GbE.rc  SISO_APC_GbE.vcxproj  SISO_APC_GbE.vcxproj.filters  SISO_APC_GbEDlg.cpp  SISO_APC_GbEDlg.h  TYConf.ini  TYLog.ini  frameGrabberInit.cpp  frameGrabberInit.h  resource.h  stdafx.cpp
SISO_APC_GbE/jpeg/: HUFF.cpp  HUFF.h  HUFFTABLES.cpp  HUFFTABLES.h  JPEGEncoder.cpp  JPEGEncoder.h  JPEGWriter.cpp  JPEGWriter.h  JpegDefines.h
SISO_APC_GbE/nanojpeg/: nanojpeg.c
SISO_APC_GbE/res/: SISO_APC_GbE.rc2
SISO_APC_GbE/x64/Release/: Go-5000m-PmCL_onlyJpeg_Generator.mcf
VA Design/OnlyJpeg_Trigger/: BaseAreaGray8_MVCL.va  DualBaseJPEG_OnlyJpeg_V01.va  DualBaseJPEG_OnlyJpeg_V02.va  ReadMe.txt
VA Design/OnlyJpeg_Trigger/BaseAreaGray8_MVCL/: vasFgProject.cpp  vasFgProject.h
VA Design/OnlyJpeg_Trigger/DualBaseJPEG_OnlyJpeg_V01/: vasFgProject.cpp  (+2 more)
VA Design/OnlyJpeg_Trigger/DualBaseJPEG_OnlyJpeg_V02/: CMakeLists.txt  vasFgProject.cpp  vasFgProject.h  vasFgProject.sln  vasFgProject.vcxproj  vasFgProject.vcxproj.filters
x64/Debug/: Go-5000m-PmCL_onlyJpeg_Exter.mcf  Go-5000m-PmCL_onlyJpeg_Generator.mcf  TYConf.ini  TYConf.json
x64/Release/: TYLog.ini
