PROJECT(vasFgProject)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4)

FILE(TO_CMAKE_PATH "$ENV{SISODIR5}" SISODIR5)
SET(CMAKE_MODULE_PATH "${SISODIR5}/cmake/modules")

INCLUDE(SisoPlatform)

FIND_PACKAGE(FgLib5 REQUIRED)
FIND_PACKAGE(SisoDisplayLib REQUIRED)
ADD_DEFINITIONS(${SISOPLATFORM_DEFINITIONS})

INCLUDE_DIRECTORIES(
	${FGLIB5_INCLUDE_DIR}
)
ADD_EXECUTABLE(vasFgProject
	vasFgProject.cpp
	vasFgProject.h
)

TARGET_LINK_LIBRARIES(vasFgProject
	${FGLIB5_LIBRARY}
	${SISODISPLAYLIB_LIBRARIES}
)

